tests/integration/snapshots/main__integration__err__error_nested_struct_with_scalar.snap
---
source: tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: type mismatch: expected struct start, got Scalar(Str("simple"))
   ╭─[ <cli>:1:10 ]
   │
 1 │ --config simple
   │          ───┬──  
   │             ╰──── type mismatch: expected struct start, got Scalar(Str("simple"))
───╯
